--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,21 +29,16 @@ jobs:
     - name: Build
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-
-    - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-
-    - name: Test
-      working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
       
+    - name: Create Artifact
+      run: |
+      mkdir release
+      cp build/Main.html release/index.html
+      cp build/Main.js release/Main.js
+      cp build/Main.wasm release/Main.wasm
+
+    - name: Publish Artifact
+      uses: actions/upload-artifact@v2
+      with:
+      name: web-release
+      path: release
