--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,21 +24,9 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}/releases -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-      
-    - name: Create Artifact
-      run: |
-      mkdir release
-      cp build/Main.html release/index.html
-      cp build/Main.js release/Main.js
-      cp build/Main.wasm release/Main.wasm
-
-    - name: Publish Artifact
-      uses: actions/upload-artifact@v2
-      with:
-      name: web-release
-      path: release
+      uses: upload-artifact@v2
+      run: cmake --build ${{github.workspace}}/releases --config ${{env.BUILD_TYPE}}
