--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/upload-artifact@v2
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -28,5 +28,4 @@ jobs:
 
     - name: Build
       # Build your program with the given configuration
-      uses: upload-artifact@v2
       run: cmake --build ${{github.workspace}}/releases --config ${{env.BUILD_TYPE}}
