--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -7,11 +7,12 @@ on:
     branches: [ main ]
 
 jobs:
-  create-release:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/release-action@v1
+    - uses: actions/checkout@v1
+    - uses: ncipollo/release-action@v1
       with:
+        artifacts: "release.tar.gz,foo/*.txt"
+        bodyFile: "body.md"
         token: ${{ secrets.GITHUB_TOKEN }}
-
