--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -15,6 +15,6 @@ jobs:
         uses: fnkr/github-action-ghr@v1
         if: startsWith(github.ref, 'refs/tags/')
         env:
-          GHR_PATH: build/
+          GHR_PATH: ${{github.workspace}}/build/
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
