--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -7,14 +7,9 @@ on:
     branches: [ main ]
 
 jobs:
-  release:
-    name: Release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Release
-        uses: fnkr/github-action-ghr@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        env:
-          GHR_PATH: ${{github.workspace}}/build/
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+  include:
+    - stage: compile linux assets and publish
+      deploy:
+        provider: releases
+        <<: *deploy_base
+        draft: true
