--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -7,9 +7,25 @@ on:
     branches: [ main ]
 
 jobs:
-  include:
-    - stage: compile linux assets and publish
-      deploy:
-        provider: releases
-        <<: *deploy_base
-        draft: true
+  release:
+    name: Create Github Release
+    runs-on: ubuntu-latest
+    steps:
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1.0.0
+      env:
+        GHR_PATH: ${{github.workspace}}/build/
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
+    - name: Output Release URL File
+      run: echo "${{ steps.create_release.outputs.upload_url }}" > release_url.txt
+    - name: Save Release URL File for publish
+      uses: actions/upload-artifact@v1
+      with:
+        name: release_url
+        path: release_url.txt
