--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -18,8 +18,8 @@ jobs:
         GHR_PATH: ${{github.workspace}}/build/
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: ${{ github.run_id }}
+        release_name: Release ${{ github.run_id }}
         draft: false
         prerelease: false
     - name: Output Release URL File
