Expanded releases.yml for all systems #12

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -7,8 +7,8 @@ on:
     branches: [ main ]
 
 jobs:
-  release:
-    name: Create Github Release
+  release-linux:
+    name: Create Github Release for linux
     runs-on: ubuntu-latest
     steps:
     - name: Create Release
@@ -19,7 +19,53 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.run_id }}
-        release_name: Release ${{ github.run_id }}
+        release_name: Release for linux ${{ github.run_id }}
+        draft: false
+        prerelease: false
+    - name: Output Release URL File
+      run: echo "${{ steps.create_release.outputs.upload_url }}" > release_url.txt
+    - name: Save Release URL File for publish
+      uses: actions/upload-artifact@v1
+      with:
+        name: release_url
+        path: release_url.txt
+
+  release-windows:
+    name: Create Github Release for windows
+    runs-on: windows-2019
+    steps:
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1.0.0
+      env:
+        GHR_PATH: ${{github.workspace}}/build/
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.run_id }}
+        release_name: Release for windows ${{ github.run_id }}
+        draft: false
+        prerelease: false
+    - name: Output Release URL File
+      run: echo "${{ steps.create_release.outputs.upload_url }}" > release_url.txt
+    - name: Save Release URL File for publish
+      uses: actions/upload-artifact@v1
+      with:
+        name: release_url
+        path: release_url.txt
+        
+  release-macos:
+    name: Create Github Release for macos
+    runs-on: macos-10.15
+    steps:
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1.0.0
+      env:
+        GHR_PATH: ${{github.workspace}}/build/
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.run_id }}
+        release_name: Release for macos ${{ github.run_id }}
         draft: false
         prerelease: false
     - name: Output Release URL File
