--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -8,17 +8,60 @@ on:
 
 jobs:
   release:
-    name: Create Github Release for linux
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-10.15, windows-2019]
+    name: Create Github Release
+    runs-on: ubuntu-latest
     steps:
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
-        GHR_PATH: ${{github.workspace}}/build/
+        GHR_PATH: ${{github.workspace}}/linux/build/
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.run_id }}
+        release_name: Release for ${{ runner.os }} ${{ github.run_id }}
+        draft: false
+        prerelease: false
+    - name: Output Release URL File
+      run: echo "${{ steps.create_release.outputs.upload_url }}" > release_url.txt
+    - name: Save Release URL File for publish
+      uses: actions/upload-artifact@v1
+      with:
+        name: release_url
+        path: release_url.txt
+
+  release:
+    name: Create Github Release
+    runs-on: windows-2019
+    steps:
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GHR_PATH: ${{github.workspace}}/windows/build/
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.run_id }}
+        release_name: Release for ${{ runner.os }} ${{ github.run_id }}
+        draft: false
+        prerelease: false
+    - name: Output Release URL File
+      run: echo "${{ steps.create_release.outputs.upload_url }}" > release_url.txt
+    - name: Save Release URL File for publish
+      uses: actions/upload-artifact@v1
+      with:
+        name: release_url
+        path: release_url.txt
+
+  release:
+    name: Create Github Release
+    runs-on: macos-10.15
+    steps:
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GHR_PATH: ${{github.workspace}}\macos\build\
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.run_id }}
