--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Create Release
-      id: create_release
+      id: create_release_for_linux
       uses: actions/create-release@v1
       env:
         GHR_PATH: ${{github.workspace}}/linux/build/
@@ -35,7 +35,7 @@ jobs:
     runs-on: windows-2019
     steps:
     - name: Create Release
-      id: create_release
+      id: create_release_for_windows
       uses: actions/create-release@v1
       env:
         GHR_PATH: ${{github.workspace}}/windows/build/
@@ -58,7 +58,7 @@ jobs:
     runs-on: macos-10.15
     steps:
     - name: Create Release
-      id: create_release
+      id: create_release_for_macos
       uses: actions/create-release@v1
       env:
         GHR_PATH: ${{github.workspace}}\macos\build\
