--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -31,24 +31,19 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
-  release-windows:
-    name: Create Github Release for windows
-    runs-on: windows-2019
-    steps:
+  #release-windows:
+    #name: Create Github Release for windows
+    #runs-on: windows-2019
+    #steps:
     - name: Create Release ${{ runner.os }}
       id: create_release_for_windows
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: svenstaro/upload-release-action@v2
       with:
-        tag_name: ${{ runner.os }}${{ github.run_id }}
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: ${{github.workspace}}/build/helloworld.exe
+        tag: ${{ runner.os }}${{ github.run_id }}
         release_name: Release for ${{ runner.os }} ${{ github.run_id }}
-        draft: false
-        prerelease: true
-    - name: Output Release URL File
-      run: echo "${{ steps.create_release.outputs.upload_url }}" > release_url.txt
-    - name: Save Release URL File for publish
-      uses: actions/upload-artifact@v1
-      with:
-        name: release_url
-        path: release_url.txt
+        asset_name: helloworld
+        overwrite: true
+        file_glob: true
+
