--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -37,13 +37,11 @@ jobs:
     #steps:
     - name: Create Release ${{ runner.os }}
       id: create_release_for_windows
-      uses: svenstaro/upload-release-action@v2
+      uses: AButler/upload-release-assets@v2.0
       with:
+        files: 'artifacts/*;packages/*.nupkg'
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ${{github.workspace}}/build/helloworld.exe
-        tag: ${{ runner.os }}${{ github.run_id }}
-        release_name: Release for ${{ runner.os }} ${{ github.run_id }}
-        asset_name: helloworld
-        overwrite: true
-        file_glob: true
+        release_tag: ${{ runner.os }}${{ github.run_id }}
+        #release_name: Release for ${{ runner.os }} ${{ github.run_id }}
+
 
