--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -31,17 +31,12 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
-  #release-windows:
-    #name: Create Github Release for windows
-    #runs-on: windows-2019
-    #steps:
     - name: Create Release ${{ runner.os }}
       id: create_release_for_windows
       uses: AButler/upload-release-assets@v2.0
       with:
         files: 'artifacts/*;packages/*.nupkg'
         release_tag: ${{ runner.os }}${{ github.run_id }}
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        #release_name: Release for ${{ runner.os }} ${{ github.run_id }}
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
 
 
