--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -33,10 +33,22 @@ jobs:
 
     - name: Create Release ${{ runner.os }}
       id: create_release_for_windows
-      uses: AButler/upload-release-assets@v2.0
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        files: 'artifacts/*;packages/*.nupkg'
-        release_tag: ${{ runner.os }}${{ github.run_id }}
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        tag_name: ${{ github.ref }}
+        release_name: Release for ${{ runner.os }} ${{ github.run_id }}
+        draft: true
+        prerelease: true
 
-
+    - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./helloworld.zip
+          asset_name: helloworld.zip
+          asset_content_type: application/zip    
