--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -49,6 +49,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release_for_windows.outputs.upload_url }}
-        asset_path: ./helloworld.zip
-        asset_name: helloworld.zip
-        asset_context_type: application/zip
+        asset_path: ${{github.workspace}}/build/helloworld.exe
+        asset_name: helloworld.exe
+        asset_context_type: application/exe
