--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -35,7 +35,7 @@ jobs:
       id: create_release_for_windows
       uses: actions/create-release@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ github.token }}
       with:
         tag_name: ${{ github.ref }}
         release_name: Release for ${{ runner.os }} ${{ github.run_id }}
@@ -43,10 +43,12 @@ jobs:
         prerelease: false
 
     - name: Upload Release ${{ runner.os }}
-      id: upload_release_for_windows
       uses: actions/upload_release_asset@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release_for_windows.outputs.upload_url }}
+        asset_path: ./build/Release/helloworld.exe
+        asset_name: helloworld.exe
+        asset_content_type: application/exe
 
