--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -48,7 +48,7 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release_for_windows.outputs.upload_url }}
-        asset_path: ./build/Release/helloworld.exe
+        asset_path: ./bin/Release/helloworld.exe
         asset_name: helloworld.exe
         asset_content_type: application/exe
 
