--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -49,6 +49,6 @@ jobs:
       with:
         upload_url: ${{ steps.create_release_for_windows.outputs.upload_url }}
         asset_path: ${{github.workspace}}/build/Release/helloworld.exe
-        asset_name: helloworld
+        asset_name: helloworld.exe
         asset_content_type: application/vnd.microsoft.portable-executable
 
