--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -48,6 +48,6 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release_for_macos.outputs.upload_url }}
-        asset_path: ${{github.workspace}}/build/Release/helloworld
+        asset_path: ${{github.workspace}}/build/Release/helloworld.exe
         asset_name: helloworld
         asset_content_type: application/vnd.microsoft.portable-executable
