--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -30,10 +30,15 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build/linux --config ${{env.BUILD_TYPE}}
 
+    - name: download
+      uses: actions/download-artifact@v2
+      with:
+        name: static-site
+
     - name: Archive
-      uses: theodor0/ziprelease@master
+      uses: montudor/action-zip@v1
       with: 
-        filename: helloworld.zip
+        args: zip -qq -r helloworld.zip build
 
     - name: Create Release ${{ runner.os }}
       id: create_release_for_linux
