--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -30,6 +30,10 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build/linux --config ${{env.BUILD_TYPE}}
 
+create-release:
+    runs-on: ubuntu-latest
+    needs: build-linux 
+    steps:
     - name: Archive
       uses: montudor/action-zip@v1
       with: 
