--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -12,6 +12,7 @@ env:
   
 jobs:
   build-linux:
+    name: Build linux
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
@@ -31,9 +32,10 @@ jobs:
       run: cmake --build ${{github.workspace}}/build/linux --config ${{env.BUILD_TYPE}}
 
   create-release:
-    name: helloworld to Github Releases
+    name: Create release and move it to GitHub Releases
     runs-on: ubuntu-latest
-    needs: build-linux 
+    needs: build-linux
+
     steps:
     - name: Archive
       uses: montudor/action-zip@v1
