--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -25,16 +25,16 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build/linux -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build/linux --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
   create-release:
     name: Create release and move it to GitHub Releases
-    runs-on: ubuntu-latest
     needs: build-linux
+    runs-on: ubuntu-latest
 
     steps:
     - name: Archive
@@ -50,6 +50,7 @@ jobs:
       with:
         tag_name: ${{ runner.os }}${{ github.run_number }}
         release_name: Release for ${{ runner.os }} ${{ github.run_number }}
+
     - name: Upload Release ${{ runner.os }}
       uses: actions/upload-release-asset@v1.0.1
       env:
