--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -38,9 +38,11 @@ jobs:
 
     steps:
     - name: Archive
-      uses: montudor/action-zip@v1
-      with: 
-        args: zip -qq -r . -i helloworld.zip ${{github.workspace}}/build
+      uses: thedoctor0/zip-release@master
+      with:
+        type: 'zip'
+        filename: 'release.zip'
+        exclusions: '*.git* /*node_modules/* .editorconfig'
 
     - name: Create Release ${{ runner.os }}
       id: create_release_for_linux
