--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -31,19 +31,16 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
-  create-release:
-    name: Create release and move it to GitHub Releases
-    needs: build-linux
-    runs-on: ubuntu-latest
+  #create-release:
+  #  name: Create release and move it to GitHub Releases
+  #  needs: build-linux
+  #  runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@master
+  #  steps:
     - name: Archive
-      uses: thedoctor0/zip-release@master
-      with:
-        type: 'zip'
-        filename: 'helloworld.zip'
-        exclusions: '*.git* /*node_modules/* .editorconfig'
+      uses: montudor/action-zip@v1
+      with: 
+        args: zip -qq -r helloworld.zip build
 
     - name: Create Release ${{ runner.os }}
       id: create_release_for_linux
@@ -61,7 +58,7 @@ jobs:
       with:
         upload_url: ${{ steps.create_release_for_linux.outputs.upload_url }}
         asset_path: ./helloworld.zip
-        asset_name: helloworld-${{ github.run_number }}.zip
+        asset_name: helloworld-v${{ github.run_number }}.zip
         asset_content_type: application/zip
 
 
