--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -31,16 +31,19 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build/windows --config ${{env.BUILD_TYPE}}
 
+    - name: Archive
+      uses: montudor/action-zip@v1
+      with: 
+        args: zip -qq -r helloworld.zip build
+
     - name: Create Release ${{ runner.os }}
       id: create_release_for_windows
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ github.token }}
       with:
-        tag_name: ${{ runner.os }}${{ github.run_id }}
-        release_name: Release for ${{ runner.os }} ${{ github.run_id }}
-        draft: false
-        prerelease: false
+        tag_name: ${{ runner.os }}${{ github.run_number }}
+        release_name: Release for ${{ runner.os }} ${{ github.run_number }}
 
     - name: Upload Release ${{ runner.os }}
       uses: actions/upload-release-asset@v1.0.1
@@ -48,7 +51,8 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release_for_windows.outputs.upload_url }}
-        asset_path: ${{github.workspace}}/build/windows/Release/helloworld.exe
-        asset_name: helloworld.exe
-        asset_content_type: application/vnd.microsoft.portable-executable
+        asset_path: ./helloworld.zip
+        asset_name: helloworld-v${{ github.run_number }}.zip
+        asset_content_type: application/zip
+
 
