--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -25,11 +25,25 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}\build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}\build\macos -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}\build --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{github.workspace}}\build\macos --config ${{env.BUILD_TYPE}}
+
+  create-release:
+    name: Create release and move it to GitHub Releases
+    needs: build-macos
+    runs-on: macos-10.15
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Archive
+      uses: papeloto/action-zip@v1
+      with:
+        files: /build/macos
+        dest: helloworld.zip
 
     - name: Create Release ${{ runner.os }}
       id: create_release_for_macos
@@ -37,10 +51,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ github.token }}
       with:
-        tag_name: ${{ runner.os }}${{ github.run_id }}
-        release_name: Release for ${{ runner.os }} ${{ github.run_id }}
-        draft: false
-        prerelease: false
+        tag_name: ${{ runner.os }}${{ github.run_number }}
+        release_name: Release for ${{ runner.os }} ${{ github.run_number }}
 
     - name: Upload Release ${{ runner.os }}
       uses: actions/upload-release-asset@v1.0.1
@@ -48,6 +60,6 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release_for_macos.outputs.upload_url }}
-        asset_path: ./bin/Release/helloworld.exe
-        asset_name: helloworld
-        asset_content_type: application/vnd.microsoft.portable-executable
+        asset_path: ./helloworld.zip
+        asset_name: helloworld-v${{ github.run_number }}.zip
+        asset_content_type: application/zip
