--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -25,11 +25,11 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}/build/windows -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{github.workspace}}/build/windows --config ${{env.BUILD_TYPE}}
 
   create-release:
     name: Create release and move it to GitHub Releases
@@ -42,7 +42,7 @@ jobs:
     - name: Archive
       uses: papeloto/action-zip@v1
       with:
-        files: /build
+        files: /build/windows
         dest: helloworld.zip
 
     - name: Create Release ${{ runner.os }}
