--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -31,16 +31,16 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build/linux --config ${{env.BUILD_TYPE}}
 
-  #create-release:
-  #  name: Create release and move it to GitHub Releases
-  #  needs: build-linux
-  #  runs-on: ubuntu-latest
+  create-release-for-linux:
+    name: Create release and move it to GitHub Releases
+    needs: build-linux
+    runs-on: ubuntu-latest
 
-  #  steps:
+    steps:
     - name: Archive
       uses: montudor/action-zip@v1
       with: 
-        args: zip -qq -r helloworld.zip build
+        args: zip -qq -r helloworld.zip ./build/linux
 
     - name: Create Release ${{ runner.os }}
       id: create_release_for_linux
