--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -31,7 +31,7 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build/windows --config ${{env.BUILD_TYPE}}
 
-  create-release:
+  create-release-for-windows:
     name: Create release and move it to GitHub Releases
     needs: build-windows
     runs-on: windows-2019
