--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Archive
       uses: papeloto/action-zip@v1
       with:
-        files: /build/windows
+        files: ${{github.workspace}}
         dest: helloworld.zip
 
     - name: Create Release ${{ runner.os }}
