--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -37,12 +37,12 @@ jobs:
   #  runs-on: windows-2019
 
   #  steps:
-    - uses: actions/checkout@v2
+  #  - uses: actions/checkout@v2
 
     - name: Archive
       uses: papeloto/action-zip@v1
       with:
-        files: ${{github.workspace}}
+        files: ${{github.workspace}}/build/windows
         dest: helloworld.zip
 
     - name: Create Release ${{ runner.os }}
