--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -38,9 +38,8 @@ jobs:
 
   #  steps:
   #  - uses: actions/checkout@v2
-
     - name: Archive
-    - uses: ncipollo/release-action@v1
+      uses: ncipollo/release-action@v1
       with:
         artifacts: "helloworld.tar.gz,foo/*.txt"
         token: ${{ secrets.GITHUB_TOKEN }}
@@ -63,5 +62,4 @@ jobs:
         asset_path: ./helloworld.zip
         asset_name: helloworld-v${{ github.run_number }}.zip
         asset_content_type: application/zip
-
 
