--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -38,31 +38,8 @@ jobs:
 
   #  steps:
   #  - uses: actions/checkout@v2
-    - name: Archive
+    - name: Create release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: helloworld.zip
-        tag: "${{ runner.os }}${{ github.run_number }}"
-        commit: helloworld
-        body: "New Release of documentation"
         token: ${{ secrets.AUTO_RELEASE_TOKEN }}
-
-    - name: Create Release ${{ runner.os }}
-      id: create_release_for_windows
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-      with:
-        tag_name: ${{ runner.os }}${{ github.run_number }}
-        release_name: Release for ${{ runner.os }} ${{ github.run_number }}
-
-    - name: Upload Release ${{ runner.os }}
-      uses: actions/upload-release-asset@v1.0.1
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-      with:
-        upload_url: ${{ steps.create_release_for_windows.outputs.upload_url }}
-        asset_path: ./helloworld.zip
-        asset_name: helloworld-v${{ github.run_number }}.zip
-        asset_content_type: application/zip
 
