--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -31,16 +31,10 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build/linux --config ${{env.BUILD_TYPE}}
 
-  create-release-for-linux:
-    name: Create release and move it to GitHub Releases
-    needs: build-linux
-    runs-on: ubuntu-latest
-
-    steps:
     - name: Archive
       uses: montudor/action-zip@v1
       with: 
-        args: zip -qq -r helloworld.zip ./build/linux
+        args: zip -qq -r helloworld.zip . -i ./build/linux
 
     - name: Create Release ${{ runner.os }}
       id: create_release_for_linux
