--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Archive
       uses: papeloto/action-zip@v1
       with:
-        files: build/windows/ helloworld.exe
+        files: build/windows/
         dest: helloworld.zip
 
     - name: Create Release ${{ runner.os }}
