--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -25,16 +25,17 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}/build/linux -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{github.workspace}}/build/linux --config ${{env.BUILD_TYPE}}
 
     - name: Archive
-      uses: montudor/action-zip@v1
-      with: 
-        args: zip -qq -r helloworld.zip build
+      uses: papeloto/action-zip@v1
+      with:
+        files: build/linux/Release
+        dest: helloworld.zip
 
     - name: Create Release ${{ runner.os }}
       id: create_release_for_linux
@@ -54,5 +55,6 @@ jobs:
         asset_path: ./helloworld.zip
         asset_name: helloworld-v${{ github.run_number }}.zip
         asset_content_type: application/zip
+
 
 
