--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Archive
       uses: papeloto/action-zip@v1
       with:
-        files: build/linux/Release
+        files: build/linux/
         dest: helloworld.zip
 
     - name: Create Release ${{ runner.os }}
@@ -53,7 +53,7 @@ jobs:
       with:
         upload_url: ${{ steps.create_release_for_linux.outputs.upload_url }}
         asset_path: ./helloworld.zip
-        asset_name: helloworld-v${{ github.run_number }}.zip
+        asset_name: helloworld-${{ runner.os }}-${{ github.run_number }}.zip
         asset_content_type: application/zip
 
 
