--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -13,6 +13,7 @@ env:
 jobs:
 
   build-macos:
+    name: Build MacOS
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
@@ -35,7 +36,8 @@ jobs:
     name: Create release and move it to GitHub Releases
     needs: build-macos
     runs-on: macos-10.15
-
+    
+    steps:
     - name: Archive
       uses: papeloto/action-zip@v1
       with:
