--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    #- uses: actions/checkout@v2
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -31,6 +31,12 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build/linux --config ${{env.BUILD_TYPE}}
 
+  create-release-for-linux:
+    name: Create release and move it to GitHub Releases
+    needs: build-linux
+    runs-on: ubuntu-latest
+    
+    steps:
     - name: Archive
       uses: papeloto/action-zip@v1
       with:
