--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -36,6 +36,7 @@ jobs:
     needs: build-windows
     runs-on: windows-2019
     
+    steps:
     - name: Archive
       uses: papeloto/action-zip@v1
       with:
