--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Archive
       uses: papeloto/action-zip@v1
       with:
-        files: build/macos/
+        files: build
         dest: helloworld.zip
 
     - name: Create Release ${{ runner.os }}
