--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Archive
       uses: papeloto/action-zip@v1
       with:
-        files: ${{github.workspace}}
+        files: ${{github.workspace}}\build\macos helloworld
         dest: helloworld-${{ runner.os }}.zip
 
     - name: Create Release ${{ runner.os }}
