--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -31,6 +31,10 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build/windows --config ${{env.BUILD_TYPE}}
 
+    - name: Run tests
+      # Run 'test' cmake target
+      run: cmake --build ${{github.workspace}}/build/windows --config ${{env.BUILD_TYPE}} --target test
+
     - name: Archive
       uses: papeloto/action-zip@v1
       with:
@@ -55,5 +59,4 @@ jobs:
         asset_path: ./helloworld-${{ runner.os }}.zip
         asset_name: helloworld-${{ runner.os }}-${{ github.run_number }}.zip
         asset_content_type: application/zip
-
 
