--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,10 @@ add_subdirectory(lib)
 add_executable(helloworld main.cpp)
 target_link_libraries(helloworld hello)
 
+ADD_SUBDIRECTORY (gtest-1.6.0)
+enable_testing()
+include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
+
 if(BUILD_TESTS)
     add_subdirectory(tests)
 endif()
